tests/invalidTest/test_9.q
# EXPECT Error:type cannot be converted
def uint16 test(){

  sint8 var7              #assign & int var
  var7 = 130
  return 0
}

